# ChangeLog for net-wireless/prism54-firmware
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/prism54-firmware/ChangeLog,v 1.13 2011/07/02 19:26:04 betelgeuse Exp $

  02 Jul 2011; Petteri Räty <betelgeuse@gentoo.org>
  prism54-firmware-2.13.ebuild:
  Fix SRC_URI and migrate to EAPI 4. Fixes bug #371015.

  04 Mar 2010; Fabio Erculiani <lxnay@gentoo.org>
  prism54-firmware-2.13.ebuild:
  move elog calls to preinst

*prism54-firmware-2.13 (04 Mar 2010)

  04 Mar 2010; Fabio Erculiani <lxnay@gentoo.org>
  +prism54-firmware-2.13.ebuild:
  add new firmware version, for Linux >=2.6.29, update SLOT, to allow
  installation side-by-side with deprecated (older) ebuild, reset KEYWORDS

  17 Oct 2009; Thilo Bangert <bangert@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  fix SRC_URI (bug #241744)

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  (QA) RESTRICT clean up.

  05 Feb 2007; Doug Goldstein <cardoe@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  Fixing udev/hotplug depend

  13 Dec 2005; Henrik Brix Andersen <brix@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  Updated SRC_URI, bug #115358.

  15 Oct 2005; Stefan Schweizer <genstef@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  Fix download location thanks to kobler alois <alois@kobler.tv> in bug 109296

  27 Feb 2005; Michael Hanselmann <hansmi@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  Added to ~ppc.

  27 Feb 2005; Malcolm Lashley <malc@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  Add amd64 - bug #83354

  09 Jan 2005; Scott W Taylor <swtaylor@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  add src_unpack stub to get rid of error message

  08 Jan 2005; Henrik Brix Andersen <brix@gentoo.org>
  prism54-firmware-1.0.4.3.ebuild:
  No need to block net-wireless/prism54 since it already blocks
  net-wireless/prism54-firmware.

*prism54-firmware-1.0.4.3 (03 Jan 2005)
