@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/prism54-firmware
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/prism54-firmware/ChangeLog,v 1.13 2011/07/02 19:26:04 betelgeuse Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/prism54-firmware/ChangeLog,v 1.14 2012/06/14 01:20:23 xmw Exp $
+
+  14 Jun 2012; Michael Weber <xmw@gentoo.org> prism54-firmware-2.13.ebuild:
+  ppc stable (bug 307767)
 
   02 Jul 2011; Petteri Räty <betelgeuse@gentoo.org>
   prism54-firmware-2.13.ebuild:
